# zero2prod

./: Cargo.toml  Dockerfile  config.yaml  spec.yaml
.cargo/: config.toml
.sqlx/: query-72f58cf2bc4ac2a637c1b35c0ca2e77ae1c8058c3667a39b05c3cbee29f731ab.json  query-8746378db29a8110af639ad4dc72d23cf6bf1bfaaef07cf0f2ea1c136c60730a.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260203153557_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  environment.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscription.rs
tests/: health_check.rs
