[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.19"
chrono = "0.4.43"
tracing = {version = "0.1.44", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.21"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }

[dependencies.uuid]
version = "1.20.0"
features = ["v4"]

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = [
  "registry",
  "env-filter"
]

[dev-dependencies]
reqwest = "0.13.1"
